--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
         <footer>
             <p> 2025 抖音文案提取与改写工具 | 使用 <a href="https://www.coze.cn" target="_blank">Coze API</a> 提供支持</p>
+            <p class="powered-by">Power By AI产品黄叔</p>
         </footer>
     </div>
 
