--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                         </div>
                     </div>
                 </div>
+                
+                <!-- 调试信息区域 -->
+                <div id="apiResponseBox" class="debug-box" style="display: none;">
+                    <h4>API响应调试信息</h4>
+                    <p class="debug-note">此区域仅在调试模式下显示</p>
+                </div>
             </section>
         </main>
 
